ui/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sccstore-ui-service
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: sccstore-ui
  type: ClusterIP
