ui/k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sccstore-ui-route
spec:
  host: sccstore-ui.apps-crc.testing
  port:
    targetPort: 8443
  tls:
    termination: passthrough 
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: sccstore-ui-service
    weight: 100
